<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/primary_color"
    tools:context=".activities.ProfileActivity">

    <ImageView
        android:id="@+id/image_back_to_profile"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/background_back"
        android:layout_gravity="start"
        android:padding="7dp"
        android:src="@drawable/ic_arrow_back"
        app:tint="@color/primary_text_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="EDIT CONTACT"
        android:textColor="@color/primary_text_color"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/image_back_to_profile"
        app:layout_constraintBottom_toBottomOf="@id/image_back_to_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>




    <View
        android:id="@+id/view_support"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toTopOf="@id/frame_contact"
        app:layout_constraintBottom_toBottomOf="@id/frame_contact"
        app:layout_constraintStart_toStartOf="@id/frame_contact"/>

    <LinearLayout
        android:id="@+id/linear_information"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="20dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/background_contact"
        app:layout_constraintTop_toBottomOf="@id/view_support"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColorHint="@color/primary_text_color"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_edit_name"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:background="@drawable/background_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/phone"
            android:textColorHint="@color/primary_text_color"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_edit_phone"
                android:textSize="17sp"
                android:background="@drawable/background_edit"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/email"
            android:textColorHint="@color/primary_text_color"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_edit_email"
                android:textSize="17sp"
                android:background="@drawable/background_edit"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_save"
            android:text="UPDATE INFORMATION"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/secondary_color"
            android:background="@drawable/background_search"
            android:backgroundTint="@color/primary_text_color"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/linear_information"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </LinearLayout>


    <FrameLayout
        android:id="@+id/frame_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_contact_avatar"
        app:layout_constraintTop_toBottomOf="@id/image_back_to_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/image_profile_contact"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
            app:riv_oval="true"/>

        <TextView
            android:id="@+id/text_first_char"
            android:text="H"
            android:textSize="62sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </FrameLayout>

    <ImageView
        android:id="@+id/image_upload_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/background_remove"
        android:layout_gravity="start"
        android:padding="7dp"
        android:src="@drawable/ic_camera"
        app:tint="@color/secondary_color"
        app:layout_constraintEnd_toEndOf="@id/frame_contact"
        app:layout_constraintBottom_toBottomOf="@id/frame_contact"/>


</androidx.constraintlayout.widget.ConstraintLayout>